Significant changes to SOAP Bot's backend structure